--- a/src/components/BlogPosts.module.css
+++ b/src/components/BlogPosts.module.css
@@ -1,4 +1,4 @@
-.posts {
+.post {
   width: 40rem;
   margin: 2rem auto;
   padding: 1rem;
@@ -8,8 +8,9 @@
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 
-.posts li {
+.post li {
   margin: 1rem;
   text-transform: capitalize;
   color: #292626;
+
 }
