--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul{
+  border: 2px solid black;
+  box-shadow: 6px 5px #888888;
+  /* background: radial-gradient(black, transparent); */
+  background: black;
+  color: white;
+  margin-right: 33%;
+}
